<resources>
    <string name="app_name">AAAAAA</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="textview4" />
    <string name="textview5" />
    <string name="textview6" />
    <string name="textview7" />
    <string name="textview8" />
    <string name="button">Button</string>
</resources>